[package]
name = "poem-spa"
version = "0.9.0"
edition = "2021"
authors = ["bdew <bdew@bdew.net>"]
description = "This crate provides an Endpoint for poem web framework that serves an SPA from static files."
readme = "README.md"
repository = "https://github.com/bdew/poem-spa"
license = "MIT/Apache-2.0"
keywords = ["http", "web", "SPA", "poem"]

[dependencies]
poem = { version = "1.3", features=["static-files"] }
percent-encoding = "2.2"
async-trait = "0.1"

[dev-dependencies]
tempdir = "0.3"
tokio = { version = "1.21" }
poem = { version = "1.3", features=["static-files","test"] }